Fixed(cima) spacing, mainly stylistic and color. Finished (cima, hero and header)

--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,29 @@
 body {
     margin: 0;
+    font-family: "roboto", arial;
 }
  /* Small Itens */
 
 .gray-block {
     background-color: gray;
-    height: 150px;
-    width: 300px;
-    flex: 2 1 1;
-}
-.text {
-    color: white;
-    background-color: gray;
+    height: 200px;
+    width: 600px;
+    margin-left: 50px;
+    flex: 0 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-button {
+.blue-button {
+    flex: 0 0 auto;
+    height: 37px;
+    width: 140px;
+    color: #f9faf8;
     background-color: #3882f6;
+    border-radius: 10px;
+    text-align: center;
+    line-height: 37px; 
 }
 
 .logo {
@@ -24,14 +32,20 @@ button {
     font-weight: bold;
 }
 /* Texts */
-
+.text {
+    color: white;
+    background-color: gray;
+}
 .main-text {
     color: #f9faf8;
     font-size: 48px;
-    font-weight: extra-bold;
+    font-weight: bold;
 }
 
-.cima,.baixo {
+.cima {
+    background-color: #1f2934;
+}
+.baixo {
     background-color: #1f2934;
 }
 .box {
@@ -45,11 +59,6 @@ button {
     color: #e5e7eb;
     font-size: 18px;
 }
-.hero-text {
-    display: flex;
-    flex-direction: column;
-    flex: 1 2 0;
-}
 
 .header {
     color: #f9faf8;
@@ -60,9 +69,12 @@ button {
 }
 .hero {
     display:flex;
-    flex: 1 1 auto;
+    justify-content: space-between;
+    padding-top: 150px;
+    padding-bottom: 120px;
 }
 
+/* List Property */
 ul {
     list-style-type: none;
 }
@@ -72,5 +84,11 @@ ul.links {
     padding: 0;
     margin: 0;
     gap: 20px;
+}
+ul.hero-text {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
 }
 
